--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ layout: default
   
   {% for post in site.posts %}
     {% if post.pinned==true %}
-      <article class="post pinned">
+      <article class="post pinned self_card">
         <h1>
             <span title="pinned"><i data-feather="anchor"></i></span><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a>
         </h1>
